<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".ActivityAgregar">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:text="@string/txv2"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txt_rut"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_rut"
            android:inputType="textPersonName"
            android:textColor="#FFEB3B" />

        <EditText
            android:id="@+id/txt_nombres"
            android:layout_width="223dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/txt_nombres"
            android:inputType="textPersonName"
            android:textColor="#FFEB3B" />

        <EditText
            android:id="@+id/txt_direccion"
            android:layout_width="326dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/txt_direccion"
            android:inputType="textPersonName"
            android:textColor="#FFEB3B" />

        <EditText
            android:id="@+id/txt_numtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_numtel"
            android:inputType="phone"
            android:textColor="#FFEB3B" />

        <EditText
            android:id="@+id/txt_apoderado"
            android:layout_width="239dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/txt_apoderado"
            android:inputType="textPersonName"
            android:textColor="#FFEB3B" />

        <EditText
            android:id="@+id/txt_precio"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="240dp"
            android:ems="10"
            android:hint="@string/txt_precio"
            android:inputType="number"
            android:textColor="#FFEB3B" />
    </LinearLayout>



    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:onClick="Registrar"
        android:text="@string/BotonRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <Button
        android:id="@+id/button4"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:onClick="Buscar"
        android:text="@string/BotonBuscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <Button
        android:id="@+id/button6"
        android:layout_width="167dp"
        android:layout_height="39dp"
        android:onClick="Modificar"
        android:text="@string/BotonModificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/button5"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:onClick="Eliminar"
        android:text="@string/BotonEliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="10dp"
        android:onClick="Volver"
        android:text="@string/btnvolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>